tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 1: only one backend qualifier can be used
layout (
^^^^^^^^...
error: 1: layout qualifier 'origin_upper_left' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'push_constant' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'blend_support_all_equations' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'color' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'location' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'offset' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'binding' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'index' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'set' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'builtin' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'input_attachment_index' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'spirv' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'metal' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'wgsl' is not permitted here
layout (
^^^^^^^^...
error: 19: only one backend qualifier can be used
layout (
^^^^^^^^...
error: 19: layout qualifier 'origin_upper_left' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'push_constant' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'blend_support_all_equations' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'color' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'location' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'offset' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'binding' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'index' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'set' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'builtin' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'input_attachment_index' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'spirv' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'metal' is not permitted here
layout (
^^^^^^^^...
error: 19: layout qualifier 'wgsl' is not permitted here
layout (
^^^^^^^^...
30 errors
